frontend/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lexend+Giga:wght@100..900&display=swap");
@import "tailwindcss";

@theme {
  /* BASE COLORS */
  --color-baseBlack: #000000;
  --color-baseWhite: #ffffff;
  --color-baseGrey: #b3b3b3;
  --color-baseDarkGrey: #737373;
  --color-baseLightGrey: #efefef;

  /* BRAND COLORS */
  --color-primary: #0087bd;
  --color-secondary: #7cfe7c;
  --color-tertiary: #f3ff69;

  --color-brandDarkBlueStandard: #0087bd;
  --color-brandDarkGreen: #76ff7a;
  --color-brandDarkYellow: #f3ff69;

  /* SEMANTIC */
  --color-error: #ff276f;

  --color-text-primary: var(--color-baseBlack);
  --color-text-secondary: var(--color-baseDarkGrey);
  --color-text-invalid: var(--color-baseGrey);
  --color-text-active: var(--color-secondary);

  --color-background-primary: var(--color-primary);
  --color-background-secondary: var(--color-secondary);
  --color-background-tertiary: var(--color-tertiary);

  --color-background-white: var(--color-baseWhite);
  --color-background-black: var(--color-baseBlack);
  --color-background-invalid: var(--color-baseLightGrey);
  --color-background-secondary: var(--color-secondary);
  --color-background-tertiary: var(--color-tertiary);

  --color-element-black: var(--color-baseBlack);
  --color-element-white: var(--color-baseWhite);
  --color-element-grey: var(--color-baseGrey);
  --color-element-greyDark: var(--color-baseDarkGrey);
  --color-element-greyLight: var(--color-baseLightGrey);
  --color-element-primary: var(--color-primary);
  --color-element-secondary: var(--color-secondary);
  --color-element-tertiary: var(--color-tertiary);

  /* TO BE CONFIRMED : shades of brand colors*/
  --color-brandDarkBlueStandardLight: #ffffff;
  --color-brandDarkBlueStandardLighter: #005f8a;

  --color-brandDarkGreenStandardLight: #ffffff;
  --color-brandDarkGreenStandardLighter: #005f8a;

  --color-brandDarkYellowStandardLight: #ffffff;
  --color-brandDarkYellowStandardLighter: #005f8a;

  /* TYPOGRAPHY */
  --font-title: "Lexend Giga", sans-serif;
  --font-body: "Inter", sans-serif;
  --font-weight-medium : 400;
  --font-weight-light:200;
  --font-weight-semibold : 500;

  /* SPACING */
  --spacing: 16px;
}

@layer components {

  /* HEADINGS and TITLES */
  .bigTitle {
    font-family: var(--font-title);
    font-size: 4rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .title {
    font-family: var(--font-title);
    font-size: 2.5rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .heading1 {
    font-family: var(--font-title);
    font-size: 2.5rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .heading2 {
    font-family: var(--font-title);
    font-size: 2rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .heading3 {
    font-family: var(--font-title);
    font-size: 1.5rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .heading4 {
    font-family: var(--font-title);
    font-size: 1rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

 

  .label {
    font-family: var(--font-title);
    font-size: 0.75rem;
    line-height: 1.5;
    font-weight: var(--font-weight-regular);
  }

  .labelBold {
    font-family: var(--font-title);
    font-size: 0.75rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  /* BODY */
  .body {
    font-family: var(--font-body);
    font-size: 1rem;
    line-height: 1.5;
    font-weight: var(--font-weight-light);
  }
  .bodyBold {
    font-family: var(--font-body);
    font-size: 1rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
  }

  .bodySmall {
    font-family: var(--font-body);
    font-size: 0.875rem;
    line-height: 1.5;
    font-weight: var(--font-weight-light);
    letter-spacing: 4%;
  }

  .bodyBigBold {
    font-family: var(--font-body);
    font-size: 1.25rem;
    line-height: 1.5;
    font-weight: var(--font-weight-medium);
    letter-spacing: 4%;
  }

  .bodySmallBold {
    font-family: var(--font-body);
    font-size: 0.875rem;
    line-height: 1.5;
    font-weight: var(--font-weight-semibold);
  }

  .caption {
    font-family: var(--font-body);
    font-size: 0.875rem;
    line-height: 1.3;
    font-weight: var(--font-weight-regular);
  }

  .buttonPrimary {
    width: 144px;
    height: 40px;
    border: 1px solid var(--color-baseWhite);
    padding: 8px;
  }
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  overflow-x: hidden;

  /* min-width: 320px;
  min-height: 100vh; */
}

/* Add this to your CSS file or in a <style> tag */
/* .blurred-bg::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url('/background/background_desktop.svg');
  background-size: cover;
  background-repeat: no-repeat;
  filter: blur(64px); 
  z-index: -1;
}

.blurred-bg {
  position: relative;
} */

/* FOR CUSTOM SCROLLBAR STYLING */
.custom-scrollbar::-webkit-scrollbar-track {
  background-color:transparent; 
} 

.custom-scrollbar::-webkit-scrollbar {
  width: 8px;
  padding: 2px;
} 

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: color-mix(in srgb, var(--color-baseBlack) 20%, transparent);
  height:49px;
  border-radius: 7px;
  width:4px;
}

